--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- END STYLE CSS -->
 </head>
-<body>
+<body class="pb-5 mb-5">
     
     <main>
         <header class="nav">
@@ -38,7 +38,48 @@
             </div>
         </section>
 
-        section
+        <div class="container">
+            <section class="testimonial mt-5">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="card-testimonial">
+                            <div class="wrapper d-flex align-items-center gap-3">
+                                <img src="./assets/images/testimonial/testimony-1.png" alt="Testimonial Profile" class="img-fluid" width="52">
+                                <h6>Jessica Watson</h6>
+                            </div>
+                            <p class="mt-3">“Highly recommend this website for quality flowers and plants. Great prices, timely delivery and excellent customer service.”</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card-testimonial">
+                            <div class="wrapper d-flex align-items-center gap-3">
+                                <img src="./assets/images/testimonial/testimony-2.png" alt="Testimonial Profile" class="img-fluid" width="52">
+                                <h6>Kate Szu</h6>
+                            </div>
+                            <p class="mt-3">"Great service, beautiful flowers, timely delivery. Highly recommend."</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card-testimonial">
+                            <div class="wrapper d-flex align-items-center gap-3">
+                                <img src="./assets/images/testimonial/testimony-3.png" alt="Testimonial Profile" class="img-fluid" width="52">
+                                <h6>Grace</h6>
+                            </div>
+                            <p class="mt-3">"I am very happy with my purchase from this website, the plants were healthy and arrived on time.”</p>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="card-testimonial">
+                            <div class="wrapper d-flex align-items-center gap-3">
+                                <img src="./assets/images/testimonial/testimony-1.png" alt="Testimonial Profile" class="img-fluid" width="52">
+                                <h6>Grace</h6>
+                            </div>
+                            <p class="mt-3">“Highly recommend this website for quality flowers and plants. Great prices, timely delivery and excellent customer service.”</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
 
     <!-- SCRIPT JS -->
