Progress: Finish Section Benefit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
 
         <div class="container">
-            <section class="testimonial mt-5">
+            <section class="testimonial" style="margin-top: 120px;">
                 <div class="row">
                     <div class="col-3">
                         <div class="card-testimonial">
@@ -75,6 +75,22 @@
                                 <h6>Grace</h6>
                             </div>
                             <p class="mt-3">“Highly recommend this website for quality flowers and plants. Great prices, timely delivery and excellent customer service.”</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div class="container-fluid">
+            <section class="benefit" style="margin-top: 120px;">
+                <div class="row">
+                    <div class="col-5 p-0">
+                        <img src="./assets/images/benefit/benefit-picture.png" alt="Benefit Banner" class="w-100">
+                    </div>
+                    <div class="col-6 d-flex align-items-center ps-5">
+                        <div class="wrapper">
+                            <h3 class="title w-75">We Help choose the most suitable plants for you</h3>
+                            <p class="paragraph">Our selection includes a wide variety of flowers, from classic roses to exotic orchids, as well as a variety of lush indoor and outdoor plants and also offer unique floral arrangements that are perfect for any occasion, whether you're looking to brighten up your home or send a thoughtful gift.</p>
                         </div>
                     </div>
                 </div>
