Progress: Finish Revision Section Testtimonial

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                                 <h6>Jessica Watson</h6>
                             </div>
                             <p class="mt-3">“Highly recommend this website for quality flowers and plants. Great prices, timely delivery and excellent customer service.”</p>
+                            <img src="./assets/images/decoration/decoration-1.png" alt="Decoration Image" class="img-fluid decoration-image">
                         </div>
                     </div>
                     <div class="col-3">
@@ -57,6 +58,7 @@
                                 <h6>Kate Szu</h6>
                             </div>
                             <p class="mt-3">"Great service, beautiful flowers, timely delivery. Highly recommend."</p>
+                            <img src="./assets/images/decoration/decoration-2.png" alt="Decoration Image" class="img-fluid decoration-image">
                         </div>
                     </div>
                     <div class="col-3">
@@ -66,6 +68,7 @@
                                 <h6>Grace</h6>
                             </div>
                             <p class="mt-3">"I am very happy with my purchase from this website, the plants were healthy and arrived on time.”</p>
+                            <img src="./assets/images/decoration/decoration-3.png" alt="Decoration Image" class="img-fluid decoration-image">
                         </div>
                     </div>
                     <div class="col-3">
@@ -75,6 +78,7 @@
                                 <h6>Grace</h6>
                             </div>
                             <p class="mt-3">“Highly recommend this website for quality flowers and plants. Great prices, timely delivery and excellent customer service.”</p>
+                            <img src="./assets/images/decoration/decoration-2.png" alt="Decoration Image" class="img-fluid decoration-image">
                         </div>
                     </div>
                 </div>
